--- a/public/css/revup-clinic-location.css
+++ b/public/css/revup-clinic-location.css
@@ -7,12 +7,10 @@
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-.revup-clinic-map p {
-	padding: 15px;
-	text-align: center;
-	color: #d32f2f;
-}
-
-.place-picker-container {
+.clinic-details {
+	font-size: 0.86rem;
+	background-color: #f9f9f9;
 	padding: 20px;
+	border-radius: 4px;
+	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
