--- a/public/css/revup-clinic-maps.css
+++ b/public/css/revup-clinic-maps.css
@@ -14,3 +14,8 @@
 	border-radius: 4px;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
+
+.clinic-details address {
+	font-style: normal;
+	line-height: 1.5;
+}
